@@ -44,6 +44,8 @@ scale_colour <- ScaleColour$build_accessor()
 scale_colour_brewer <- ScaleBrewer$build_accessor(c(variable = "\"colour\""))
 scale_colour_gradient <- ScaleGradient$build_accessor(c(variable = "\"colour\""))
 scale_colour_gradient2 <- ScaleGradient2$build_accessor(c(variable = "\"colour\""))
+scale_colour_gradientn <- ScaleGradientCustome$build_accessor(c(variable = "\"colour\""))
+scale_colour_gradientn <- ScaleGradientn$build_accessor(c(variable = "\"colour\""))
 scale_colour_grey <- ScaleGrey$build_accessor(c(variable = "\"colour\""))
 scale_colour_hue <- ScaleHue$build_accessor(c(variable = "\"colour\""))
 scale_colour_identity <- ScaleIdentity$build_accessor(c(variable = "\"colour\""))
@@ -51,6 +53,8 @@ scale_colour_manual <- ScaleManual$build_accessor(c(variable = "\"colour\""))
 scale_fill_brewer <- ScaleBrewer$build_accessor(c(variable = "\"fill\""))
 scale_fill_gradient <- ScaleGradient$build_accessor(c(variable = "\"fill\""))
 scale_fill_gradient2 <- ScaleGradient2$build_accessor(c(variable = "\"fill\""))
+scale_fill_gradientn <- ScaleGradientCustome$build_accessor(c(variable = "\"fill\""))
+scale_fill_gradientn <- ScaleGradientn$build_accessor(c(variable = "\"fill\""))
 scale_fill_grey <- ScaleGrey$build_accessor(c(variable = "\"fill\""))
 scale_fill_hue <- ScaleHue$build_accessor(c(variable = "\"fill\""))
 scale_fill_identity <- ScaleIdentity$build_accessor(c(variable = "\"fill\""))
